<resources>
    <string name="app_name">MoCo_2021_NoMoreLists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameHint">Name</string>
    <string name="streetHint">Street</string>
    <string name="cityHint">City</string>
    <string name="phone_numberHint">Phone Number</string>
    <string name="emailHint">Email</string>
    <string name="zipHint">ZIP</string>
    <string name="saveText">Save</string>
    <string name="title_activity_input">InputActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>